sc item align issue solved

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -10,7 +10,7 @@
 .scroll-carousel-slider{
   position:relative;
   white-space:nowrap;
-  display: inline-block;
+  display: inline-flex;
 }
 
 .sc-cell{
@@ -18,7 +18,7 @@
 }
 
 .scroll-carousel-slider img{
-  width: auto;
+  width: 100%;
   margin: 1px;
   /* height: 48px; */
 }
